--- a/lib/tinymce/skins/custom/content.css
+++ b/lib/tinymce/skins/custom/content.css
@@ -5,3 +5,16 @@ body {
 img {
     max-width: 100%;
 } 
+
+p:first-child:first-letter {
+
+float: left;
+color: #903;
+font-size: 75px;
+line-height: 60px;
+padding-top: 4px;
+padding-right: 8px;
+padding-left: 3px;
+font-family: Georgia; 
+
+}
