--- a/lib/tinymce/skins/custom/content.css
+++ b/lib/tinymce/skins/custom/content.css
@@ -6,15 +6,15 @@ img {
     max-width: 100%;
 } 
 
-p:first-child:first-letter {
+p {
+         font-size: 1.1em;
+         text-shadow: 0em 0em 0.1em #666;
+}
 
-float: left;
-color: #903;
-font-size: 75px;
-line-height: 60px;
-padding-top: 4px;
-padding-right: 8px;
-padding-left: 3px;
-font-family: Georgia; 
+
+p:first-letter {
+
+    font-weight:bold;
+    font-size: 1.2em;
 
 }
